sql/table.cc
@@ -3542,6 +3542,34 @@ bool Virtual_column_info::cleanup_session_expr()
 }
 
 
+bool
+Virtual_column_info::is_equivalent(THD *thd, TABLE_SHARE *share, TABLE_SHARE *vcol_share,
+                                  const Virtual_column_info* vcol, bool &error) const
+{
+  MEM_ROOT memroot;
+  init_alloc_root(PSI_INSTRUMENT_ME, &memroot, ALLOC_ROOT_MIN_BLOCK_SIZE, 4096,
+                  MYF(MY_THREAD_SPECIFIC));
+  SCOPE_VALUE(thd->mem_root, &memroot);
+  SCOPE_VALUE(thd->free_list, (Item *) NULL);
+  /* SCOPE_EXIT must go after SCOPE_VALUE as destructors are called in reverse order */
+  SCOPE_EXIT([thd, memroot]() mutable { thd->free_items(); free_root(&memroot, MYF(0)); });
+  error= true;
+  Item *cmp_expr= vcol->expr->build_clone(thd);
+  if (!cmp_expr)
+    return false;
+  Item::func_processor_rename_table param;
+  param.old_db=    Lex_ident_db(vcol_share->db);
+  param.old_table= Lex_ident_table(vcol_share->table_name);
+  param.new_db=    Lex_ident_db(share->db);
+  param.new_table= Lex_ident_table(share->table_name);
+  cmp_expr->walk(&Item::rename_table_processor, 1, &param);
+
+  error= false;
+  return type_handler()  == vcol->type_handler()
+      && is_stored() == vcol->is_stored()
+      && expr->eq(cmp_expr, true);
+}
+
 
 class Vcol_expr_context
 {
